# drf-auth2

./: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
articles/: models.py  permissions.py  serializer.py  urls.py  views.py
articles/migrations/: 0001_initial.py
new_project/: settings.py  urls.py
